fixed some warnings
git-svn-id: svn://svn.code.sf.net/p/mobac/code/trunk/MOBAC@2552 a036c9c4-4c23-4c51-82c3-8fdb5c987102